correct letter-spacing 0.3em

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -25,7 +25,7 @@
       $weight: 700,
       $size: 36px,
       $line-height: 1.08,
-      $letter-spacing: 0.03em
+      $letter-spacing: 0.3em
     );
     color: $colorWhite;
     @include for-size(tablet) {
